# pepenet-desktop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
design/: README.md  screens.html
packaging/: Info.plist.in  com.pepenet.app.plist  config.pep.json  install-helper.ps1  install-helper.sh  make_icns.sh  package-win.ps1  package.sh  pepenet.entitlements  pepenet.icns  pepenet.rc  pepenet.wxs
scripts/: copy_fonts.cmake  fetch_vendors.sh  make_universal_openssl.sh
src/: appconf.h  bip39.c  bip39.h  bip39_wordlist.c  dirscan.c  dirscan.h  dnsnet.c  dnsnet.h  engine.c  engine.h  favicon.c  favicon.h  fee.c  fee.h  hdwallet.c  hdwallet.h  main.c  model.c  model.h  model_demo.c  ops.c  ops.h  platform.h  platform_mac.m  platform_win.c  qr.c  qr.h  signer.c  signer.h  sokol_impl.m  sokol_impl_win.c  sysinstall.c  sysinstall.h  sysinstall_win.c  tray.m  tray_win.c  trust_win.c  wallet.c  wallet.h  webproxy.c  (+3 more)
src/compat/: win_compat.c
src/compat/win/: dnet_wincompat.h  libgen.h  netdb.h  poll.h  unistd.h
src/compat/win/arpa/: inet.h
src/compat/win/netinet/: in.h  tcp.h
src/compat/win/sys/: file.h  random.h  select.h  socket.h  stat.h  un.h
src/ui/: dialogs.c  draw.c  draw.h  nk_config.h  popups.c  strings.c  strings.h  theme.c  theme.h  ui.c  ui.h  view_discover.c  view_dns.c  view_peers.c  view_screens.c  view_ssl.c  widgets.c
